# ladybird

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
AK/: Assertions.h  COWVector.h  DoublyLinkedList.h  Forward.h  HashTable.h  IPv6Address.h  Optional.h  Vector.h
Ladybird/: HelperProcess.cpp
Ladybird/RequestServer/: CMakeLists.txt
Libraries/LibDNS/: Message.cpp  Message.h  Resolver.h
Libraries/LibGC/: Cell.h  ForeignCell.h  Heap.h  Ptr.h
Libraries/LibGfx/: CMakeLists.txt
Libraries/LibLine/: Editor.cpp  Editor.h
Libraries/LibRegex/: CMakeLists.txt  RegexByteCode.cpp  RegexByteCode.h  RegexMatch.h  RegexMatcher.cpp  RegexMatcher.h  RegexNFA.cpp  RegexNFA.h  RegexOptimizer.cpp  RegexParser.h
Libraries/LibTest/: JavaScriptTestRunner.h
Libraries/LibWasm/: Constants.h  Opcode.h  Types.h
Libraries/LibWasm/AbstractMachine/: AbstractMachine.cpp  AbstractMachine.h  BytecodeInterpreter.cpp  BytecodeInterpreter.h  (+4 more)
Libraries/LibWeb/: idl_files.cmake
Libraries/LibWebView/: Utilities.cpp  ViewImplementation.cpp  ViewImplementation.h
Meta/: generate-libwasm-spec-test.py
Meta/CMake/: jakt.cmake  lagom_compile_options.cmake
Meta/Lagom/: CMakeLists.txt
Services/RequestServer/: ConnectionFromClient.cpp  ConnectionFromClient.h
Services/WebContent/: ConnectionFromClient.cpp  ConnectionFromClient.h  PageClient.cpp  PageClient.h  WebContentServer.ipc
Tests/LibGC/: CMakeLists.txt  TestGCBindings.jakt  TestHeap.cpp  TestInteropJakt.cpp
Tests/LibWasm/: test-wasm.cpp
Userland/Utilities/: dns.cpp
Utilities/: CMakeLists.txt  dns.cpp  wasm.cpp  web-js.cpp
(+26 files in other folders)
